Squash: type zoo, string rework, misc fixes.

--- a/sass/tabs.scss
+++ b/sass/tabs.scss
@@ -127,3 +127,80 @@ tabs:after {
     content: '';
     display: table;
 }
+
+
+
+zoo-xxx {
+    font-size: 0;
+    margin: 5px 0;
+    display: block;
+    background-color: red;
+
+
+    > tab {
+        display: inline;
+
+        > panel {
+            display: inline;
+            display: inline-block;
+            overflow: hidden;
+            position: relative;
+            height: 0;
+            width: 0;
+        }
+
+        > panel > div {
+            box-sizing: border-box;
+            display: block;
+            padding: 20px 20px 20px 20px;
+            float: left;
+            font-size: 10pt;
+            margin-top: -1px;
+            width: 100%;
+        }
+
+        > label {
+            display: inline-block;
+            font-size: 1.3rem;
+            left: 1px;
+            margin-left: -1px;
+            padding: 10px;
+            position: relative;
+            vertical-align: bottom;
+            cursor: pointer;;
+
+            // In some places we don't want our Rust-like color scheme b/c we have conflicting
+            // background colors.
+            .token.class-name, .token.keyword {
+                // font-weight: bold;
+                color: black;
+            }
+        }
+
+        > input[type="radio"] {
+            clip: rect(0 0 0 0);
+            height: 1px;
+            opacity: 0;
+            position: fixed;
+            width: 1px;
+            z-index: -1;
+        }
+
+
+        > input[type="radio"]:checked + label {
+            border-bottom-width: 0;
+            padding-bottom: 11px;
+            z-index: 1;
+        }
+
+        > input[type="radio"]:checked ~ panel {
+            display: inline;
+        }
+    }
+}
+
+zoo-xxx:after {
+    clear: both;
+    content: '';
+    display: table;
+}
